<resources>
    <string name="app_name">LoggerBird</string>
    <string name="library_name">LoggerBird</string>
    <string name="permission_granted">Permission granted!</string>
    <string name="permission_denied">Permission denied!</string>
    <string name="permission_draw_other_apps_granted">Permission draw other app settings granted!</string>
    <string name="permission_draw_other_apps_denied">Permission draw other app settings denied!</string>
    <string name="permission_audio_granted">Permission audio granted!</string>
    <string name="permission_audio_denied">Permission audio denied!</string>
    <string name="permission_write_external_storage_granted">Permission write external storage granted!</string>
    <string name="permission_write_external_storage_denied">Permission write external storage denied!</string>
    <string name="snackbar_delete">delete</string>
    <string name="snackbar_delete_verification">Are you sure you want to delete?</string>
    <string name="snackbar_delete_success">Deleted!</string>
    <string name="snackbar_yes">YES</string>
    <string name="snackbar_no">NO</string>
    <string name="snackbar_cancelled">Cancelled!</string>
    <string name="snackbar_dismiss">Dismiss!</string>
    <string name="snackbar_apply">Apply</string>
    <string name="snackbar_cancel">Cancel</string>
    <string name="snackbar_current_width">Current width:</string>
    <string name="snackbar_brush_width_adjusting">Brush width is adjusting</string>
    <string name="snackbar_brush_width_adjust">Adjust your brush width</string>
    <string name="snackbar_ok">OK</string>
    <string name="snackbar_successfully_saved">Successfully saved!</string>
    <string name="drawing_cancelled_message">Drawing is cancelled!</string>
    <string name="pip_unsupported">Picture in picture mode not supported in this android version!</string>
    <string name="foreground_service_video_notification_title">LoggerBird screen recording is running.</string>
    <string name="screen_shot_picture_in_picture_warning_message">Please save your drawing or remove it , in order to proceed!</string>
    <string name="screen_shot_taken">ScreenShot Taken!</string>
    <string name="audio_recording_start">Audio recording started!</string>
    <string name="audio_recording_finish">Audio recording finished!</string>
    <string name="screen_recording_start">Screen recording started!</string>
    <string name="screen_recording_finish">Screen recording finished!</string>
    <string name="screen_recording_unsupported">Screen recording not supported in this version of android!</string>
    <string name="feed_back_email_empty_text">Your feedback message cannot be empty!</string>
    <string name="logger_bird_floating_action_button_permission_message">Do you want to activate Loggerbird?</string>
    <string name="logger_bird_floating_action_button_activate">Activate</string>
    <string name="logger_bird_floating_action_button_close_message">Loggerbird is closed!</string>
    <string name="logger_bird_floating_action_button_open_message">Loggerbird is activated!</string>
    <string name="total_session_time">Total life time:</string>
    <string name="last_session_time">Last session duration:</string>
    <string name="session_file_limit">You have achieved maximum save file limit in one session!</string>
    <string name="files_action_limit">You have achieved maximum save file limit , loggerbird will not be started until file action is choosed!</string>
    <string name="files_action_share">Share file!</string>
    <string name="files_action_discard">Discard files!</string>
    <string name="files_action_mail_success">Files sent as e-mail successfully!</string>
    <string name="files_action_delete_success">Files discarded successfully!</string>
    <string name="share_video_delete">Video file is deleted</string>
    <string name="share_audio_delete">Audio file is deleted</string>
    <string name="share_media_delete">Media file is deleted</string>
    <string name="share_media_delete_error">Media file is already deleted</string>
    <string name="share_file_sent">Media file is sent!</string>
    <string name="share_file_sent_error">An error happened while trying to send media file!</string>
    <string name="jira_sent">Jira issue opened!</string>
    <string name="jira_sent_error">An error happened while trying to open jira issue!</string>
    <string name="jira_sent_error_time_out">An error happened while trying to open jira issue , system has been timed out!</string>
    <string name="media_recording_error">Please complete your other media operation!</string>
    <string name="jira_project_empty">Project cannot be empty!</string>
    <string name="jira_project_doesnt_exist">This project doesn\'t exist!</string>
    <string name="jira_issue_type_empty">Issue type cannot be empty!</string>
    <string name="jira_issue_type_doesnt_exist">This issue type doesn\'t exist!</string>
    <string name="jira_summary_empty">Summary cannot be empty!</string>
    <string name="jira_reporter_empty">Reporter doesn\'t exist!</string>
    <string name="jira_fix_version_empty">Fix version doesn\'t exist!</string>
    <string name="jira_component_version_empty">Component doesn\'t exist!</string>
    <string name="jira_epic_link_empty">Epic link doesn\'t exist!</string>
    <string name="jira_epic_name_empty">Epic name cannot be empty!</string>
    <string name="jira_summary_unhandled_exception">unhandled_exception:</string>
    <string name="jira_description_unhandled_exception">An unhandled exception detected check log file for more details!</string>
    <string name="jira_issue_preferences_save">Issue preferences are saved!</string>
    <string name="jira_issue_preferences_delete">Issue preferences are deleted!</string>
    <string name="jira_issue_exist">This issue already added to list!</string>
    <string name="jira_issue_doesnt_exist">This issue doesn\'t exist!</string>
    <string name="jira_label_exist">This label already added to list!</string>
    <string name="jira_label_doesnt_exist">This label doesn\'t exist!</string>
    <string name="jira_component_exist">This component already added to list!</string>
    <string name="jira_component_doesnt_exist">This component doesn\'t exist!</string>
    <string name="jira_fix_versions_exist">This fix-version already added to list!</string>
    <string name="jira_fix_versions_doesnt_exist">This fix-version doesn\'t exist!</string>
    <string name="jira_priority_empty">Priority cannot be empty!</string>
    <string name="jira_priority_doesnt_exist">This priority doesn\'t exist!</string>
    <string name="jira_linked_issue_empty">Linked issue cannot be empty!</string>
    <string name="jira_linked_issue_doesnt_exist">This linked issue doesn\'t exist!</string>
    <string name="slack_message_empty">Message cannot be empty!</string>
    <string name="slack_sent">Slack message sent!</string>
    <string name="slack_sent_error">An error happened while trying to send slack message!</string>
    <string name="slack_sent_error_time_out">An error happened while trying to open slack message , system has been timed out!</string>
    <string name="unhandled_title">We have detected an error from your last session , do you want to share this file?</string>
    <string name="unhandled_discard">Discard!</string>
    <string name="unhandled_share">Share file</string>
    <string name="unhandled_customize_jira">*Customize and send!</string>
    <string name="unhandled_send">*Send!</string>
    <string name="unhandled_file_doesnt_exist">File path doesn\'t exist!</string>
    <string name="unhandled_file_discard_success">File discarded successfully!</string>
    <string name="unhandled_file_duplication_found">We have detected duplication error messages , do you still want to create issue?</string>
    <string name="email_invalid_format">Invalid e-mail format!</string>
    <string name="email_to_duplication">This user already added to list!</string>
    <string name="future_task_enabled">Future-task enabled!</string>
    <string name="future_task_disabled">Future-task disabled!</string>
    <string name="future_task_empty">Date or time cannot be empty!</string>
    <string name="future_task_gathered">Future-task details have been gathered!</string>
    <string name="github_title_empty">Title cannot be empty!</string>
    <string name="github_issue_success">Issue opened successfully!</string>
    <string name="github_issue_failure">An error happened while trying to open github issue!</string>
    <string name="github_issue_time_out">An error happened while trying to open github issue , system has been timed out!</string>
    <string name="github_issue_preferences_save">Issue preferences are saved!</string>
    <string name="github_issue_preferences_delete">Issue preferences are deleted!</string>
    <string name="github_repo_empty">Repository cannot be empty!</string>
    <string name="github_repo_doesnt_exist">This repository doesn\'t exist!</string>
    <string name="github_assignee_exist">This assignee already added to list!</string>
    <string name="github_assignee_doesnt_exist">This assignee doesn\'t exist!</string>
    <string name="github_label_exist">This label already added to list!</string>
    <string name="github_label_doesnt_exist">This label doesn\'t exist!</string>
    <string name="github_project_exist">This project already added to list!</string>
    <string name="github_project_doesnt_exist">This project doesn\'t exist!</string>
    <string name="github_mile_stone_doesnt_exist">This milestone doesn\'t exist!</string>
    <string name="github_linked_pull_request_doesnt_exist">This linked pull request doesn\'t exist!</string>
    <string name="gitlab_sent">Gitlab issue is created!</string>
    <string name="gitlab_sent_error">An error happened while trying to create Gitlab issue!</string>
    <string name="gitlab_sent_error_time_out">An error happened while trying to open Gitlab issue , system has been timed out!</string>
    <string name="trello_issue_success">Issue opened successfully!</string>
    <string name="textView_delete_verification">Are you sure you want to delete?</string>
    <string name="textView_yes">YES</string>
    <string name="textView_no">NO</string>
    <string name="textView_jira_title">Create Gitlab Issue</string>
    <string name="textView_jira_project">Project</string>
    <string name="textView_jira_issue_type">Issue Type</string>
    <string name="textView_jira_summary">Summary</string>
    <string name="textView_jira_description">Description</string>
    <string name="textView_jira_reporter">Reporter</string>
    <string name="textView_jira_linked_issue">Linked Issues</string>
    <string name="textView_jira_assignee">Assignee</string>
    <string name="textView_jira_priority">Priority</string>
    <string name="button_jira_create">Create</string>
    <string name="button_jira_cancel">Cancel</string>
    <string name="textView_recyclerView_popup_title">Are you sure to remove attachment from your Jira issue?</string>
    <string name="button_recyclerView_yes">Delete Attachment</string>
    <string name="button_recyclerView_no">Keep File</string>
    <string name="textView_duplication_popup_title">Warning:Duplication!</string>
    <string name="textView_duplication_popup_content">We have detected duplication error messages , do you still want to create issue?</string>
    <string name="button_duplication_popup_proceed">Proceed!</string>
    <string name="button_duplication_popup_cancel">Cancel!</string>
    <string name="textView_duplication_check">Duplication:</string>
    <string name="textView_recyclerView_trello_label_header">Delete label</string>
    <string name="textView_recyclerView_trello_label_title">Are you sure to remove label from your trello issue?</string>
    <string name="button_recyclerView_trello_label_delete">Delete label</string>
    <string name="button_recyclerView_trello_label_keep">Keep label</string>
</resources>