<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:id="@+id/my_snackbar_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/gray"
    android:padding="15dp">

    <TextView
        android:id="@+id/message_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight=".8"
        android:gravity="center_vertical"
        android:textSize="15sp"
        android:text="@string/textView_delete_verification"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/snackbar_no"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight=".2"
        android:gravity="center"
        android:text="@string/textView_no"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/snackbar_yes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight=".2"
        android:gravity="center"
        android:text="@string/textView_yes"
        android:textColor="@color/white"/>

</LinearLayout>