<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cookie"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:background="@color/cookieBarColor"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="35dp">


    <TextView
        android:id="@+id/textView_unhandled_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:layout_gravity="center"
        android:text="@string/unhandled_title"
        android:textColor="@android:color/white"
        android:textSize="15sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false"
        android:layout_marginTop="15dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                >
                <TextView
                    android:id="@+id/textView_unhandled_check"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="@string/textView_duplication_check"
                    android:textColor="@android:color/white"
                    android:textSize="15sp" />

                <CheckBox
                    android:id="@+id/checkBox_unhandled_jira"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@color/white"
                    android:background="@null" />
            </LinearLayout>
            <TextView
                android:id="@+id/textView_unhandled_discard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:layout_gravity="bottom"
                android:text="@string/unhandled_discard"
                android:textColor="@android:color/white"
                android:textSize="15sp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/textView_unhandled_jira_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/unhandled_share_with_jira"
                android:textColor="@android:color/white"
                android:textSize="15sp" />
            <TextView
                android:id="@+id/textView_unhandled_jira_customize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/unhandled_customize_jira"
                android:textColor="@android:color/white"
                android:textSize="15sp" />
            <TextView
                android:id="@+id/textView_unhandled_share_jira"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unhandled_send"
                android:layout_gravity="start"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                android:textStyle="italic" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>

