<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:background="@android:color/transparent"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/cookieBarColor"
        >
    <TextView
        android:id="@+id/textView_recycler_view_jira_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="14sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:text="@string/textView_recyclerView_popup_title" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        >
        <Button
            android:id="@+id/button_recycler_view_jira_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="14sp"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:backgroundTint="@color/white"
            android:text="@string/button_recyclerView_yes" />

        <Button
            android:id="@+id/button_recycler_view_jira_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="14sp"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:backgroundTint="@color/white"
            android:text="@string/button_recyclerView_no" />
    </LinearLayout>
    </LinearLayout>
</LinearLayout>
